# OPonGL

./: .gitmodules  CMakeLists.txt  README.md  configure.sh  run.sh  vcpkg.json
assets/shaders/: white.vert
icons/mac/: build.sh  mac_icon_template.ora  mac_icon_template.ora.kra  pong.icns
include/: debug.hpp  game.hpp  input_system.hpp  quad.hpp  renderer.hpp  uniform_id.hpp
src/: game.cpp  input_system.cpp  main.cpp  quad.cpp  renderer.cpp  uniform_id.cpp
src/game/: game.cpp  game.h
src/ren/: glheaders.h  mesh.cpp  mesh.h  ren.cpp  ren.h  shader.cpp  shader.h
src/utils/: framecounter.cpp  framecounter.h  timer.cpp  timer.h
